[project]
name = "plasticity-monitor"
version = "0.0.1"
description = "Plasticity half-life + safety monitor for safe continual learning"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
  {name = "Jeanpaul Powell", email = "info@edgebornelabs.com"}
]
dependencies = [
  "numpy>=1.21",
]

[project.optional-dependencies]
pytorch = ["torch>=2.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
